# prosemble

./: .bumpversion.cfg  .coveragerc  .gitignore  .readthedocs.yaml  404.html  CITATION (1).cff  CITATION.cff  CONSTITUTION.md  Dockerfile  LICENSE  Lgmlvq.pkl  ONNX_COVERAGE.md  README.md  ROADMAP.md  TASK.md  TESTING.md  devenv.nix  flake.nix  grlvq.pkl  hybrid1.py  hybrid12.py  imp_commands.txt  index.html  knn.pkl  label_security1.py  mkdocs.yml  n.py  prosemble.py  pyproject.toml  pytest.ini  requiremenst.txt  requirements-test.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sim_test_iris_.py  sitemap.xml  svc.pkl  test_iris1.py  (+3 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build-test-macos-disabled.yml.bak  build-test-macos.yml  build-test-ubuntu-disabled.yml.bak  build-test-ubuntu.yml  build-test-ubuntu.yml.disabled  build-test.yml  ci.yml  docs-build.yml  docs.yml  examples.yml  macos.yml  release.yml  test-muiltiple-versions.yml  test.yml  ubuntu.yml  windows.yml
benchmarks/: benchmark_distance_jax.py  benchmark_fcm_jax.py  benchmark_pcm_jax.py
changelog/: index.html
contributing/: index.html
docs/: JAX_MIGRATION.md  changelog.md  common.md  contributing.md  index.md  installation.md  prosemble.md
examples/: Custom_Data_Example.py  afcm_iris.py  bgpc_iris.py  cbc_iris.py  celvq_ng_iris.py  dtc.pkl  example.py  example_spectral_clustering.py  fcm_iris.py  fpcm_iris.py  glvq_advanced_iris.py  glvq_iris.py  glvq_unequal_prototypes_iris.py  gmlvq_iris.py  grlvq_iris.py  hcm_iris.py  heskes_som_iris.py  ipcm2_iris.py  ipcm_iris.py  kafcm_iris.py  kfcm_iris.py  kfpcm_iris.py  kipcm2_iris.py  kipcm_2_iris.py  kipcm_iris.py  kmeans_iris.py  kmeans_plusplus_iris.py  knn_iris.py  kohonen_som_iris.py  kpcm_iris.py  kpfcm_iris.py  large_dataset_training.py  lcelvq_ng_iris.py  lmrslvq_iris.py  lmrslvq_ng_iris.py  lvq1_iris.py  lvqmln_iris.py  mcelvq_ng_iris.py  mrslvq_iris.py  mrslvq_ng_iris.py  (+41 more)
examples/intro/: index.html
examples/label_security/: README.md  grmlvq.pkl  lmrslvq.pkl  rslvq.pkl  test_iris_.py  test_wdbc.py  trained_models.py  trained_models2.py
faq/: index.html
installation/: index.html
nix/: package.nix
prosemble/: __init__.py  bgpc.py  distance.py  fcm.py  fpcm.py  hcm.py  ipcm.py  ipcm_2.py  kmeans.py  knn.py  labelsecurity.py  pcm.py  pfcm.py
prosemble/core/: __init__.py  activations.py  callbacks.py  competitions.py  curriculum.py  data.py  distance.py  distance_jax.py  distributed.py  geodesic.py  graphdata.py  initializers.py  kernel.py  losses.py  manifolds.py  model_selection.py  onnx_export.py  optimizers.py  pipeline.py  pooling.py  protocols.py  quantization.py  regularization.py  reject.py  serialization.py  similarities.py  utils.py  vis.py  visualizer.py
prosemble/datasets/: __init__.py  dataset.py
prosemble/models/: __init__.py  afcm.py  base.py  bgpc.py  cbc.py  celvq_ng.py  celvq_ng_mixin.py  crossentropy_lvq.py  dk_glvq.py  dk_glvq_ng.py  dk_heskes_som.py  dk_kohonen_som.py  dk_matrix_lvq.py  dk_matrix_lvq_ng.py  dk_neural_gas.py  dk_relevance_lvq.py  dk_relevance_lvq_ng.py  fcm.py  fpcm.py  glvq.py  growing_neural_gas.py  hcm.py  heskes_som.py  image_cbc.py  image_lvq.py  ipcm.py  ipcm2.py  ipcm_2.py  kafcm.py  kfcm.py  kfpcm.py  kipcm.py  kipcm2.py  kmeans.py  knn.py  kohonen_som.py  kpcm.py  kpfcm.py  lcelvq_ng.py  local_matrix_lvq.py  (+75 more)
prosemble/models/jax/: __init__.py  fcm_jax.py  pcm_jax.py
search/: search_index.json
simulation/: opt_m.py  test_iris1.py  test_wdbc1.py
sphinx-docs/: conf.py  index.rst  installation.rst  make.bat  quickstart.rst
sphinx-docs/api/: core.rst  models.rst
sphinx-docs/guides/: advanced.rst  clustering.rst  differentiating_kernels.rst  one_class.rst  onnx.rst  riemannian.rst  supervised.rst  topology.rst
tests/: README.md  __init__.py  conftest.py  test_activations.py  test_bgpc.py  test_cbc.py  test_celvq_ng.py  test_checkpoint.py  test_clustering_patience.py  test_competitions.py  test_core.py  test_core_jax.py  test_data.py  test_dataset.py  test_dataset_jax.py  test_distance_jax.py  test_distributed.py  test_dk_models.py  test_dk_ng_models.py  test_examples.sh  test_fcm_jax.py  test_glvq.py  test_gmlvq.py  test_hcm.py  test_heskes_som.py  test_hyperbolic.py  test_image_lvq.py  test_improvements.py  test_initializers.py  test_jax_models.py  test_jit_inference.py  test_kernel_models.py  test_knn.py  test_kohonen_som.py  test_lcelvq_ng.py  test_losses.py  test_lvq_nongradient.py  test_lvqmln_plvq.py  test_matrix_rslvq.py  test_mcelvq_ng.py  (+48 more)
usage/: index.html  usage.md
