[project]
name = "prosemble"
version = "0.9.2"
description = "A python project for prototype-based machine learning models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Nana Abeka Otoo", email = "nanaabekaotoo@gmail.com" }
]
keywords = ["prosemble", "machine learning", "AI"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "numpy",
    "scikit-learn",
    "pandas",
    "scipy",
    "matplotlib"
]    

[project.urls]
Homepage = "https://github.com/naotoo1/prosemble"
Repository = "https://github.com/naotoo1/prosemble"
Issues = "https://github.com/naotoo1/prosemble/issues"

[tool]
[tool.setuptools.packages.find]
include = ["prosemble"]
exclude = ["docs*"]

[tool.distutils.bdist_wheel]
universal = true

[tool.bumpversion]
current_version = "0.9.2"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "prosemble/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[project.optional-dependencies]
dev = [
    "black",
    "black[jupyter]",
    "pip",
    "bump2version",
    "wheel",
    "watchdog",
    "flake8",
    "tox",
    "coverage",
    "Sphinx",
    "twine",
    "autopep8",
    "pytest"
]
all = [
    "numpy",
    "scikit-learn",
    "pandas",
    "scipy",
    "matplotlib",
    "black",
    "black[jupyter]",
    "pip",
    "bump2version",
    "wheel",
    "watchdog",
    "flake8",
    "tox",
    "coverage",
    "Sphinx",
    "twine",
    "autopep8",
    "pytest"
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
