[project]
name = "prosemble"
version = "1.1.1"
description = "A python project for prototype-based machine learning models"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Nana Abeka Otoo", email = "nanaabekaotoo@gmail.com" }
]
keywords = ["prosemble", "machine learning", "AI"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "numpy",
    "scikit-learn",
    "matplotlib"
]    

[project.urls]
Homepage = "https://github.com/naotoo1/prosemble"
Documentation = "https://prosemble.readthedocs.io"
Repository = "https://github.com/naotoo1/prosemble"
Issues = "https://github.com/naotoo1/prosemble/issues"

[tool]
[tool.setuptools.package-data]
prosemble = ["py.typed"]

[tool.setuptools.packages.find]
include = ["prosemble"]
exclude = ["docs*"]

[tool.distutils.bdist_wheel]
universal = true

[tool.bumpversion]
current_version = "1.1.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "prosemble/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[project.optional-dependencies]
dev = [
    "black",
    "black[jupyter]",
    "pip",
    "bump2version",
    "wheel",
    "watchdog",
    "flake8",
    "tox",
    "coverage",
    "Sphinx",
    "furo",
    "sphinx-copybutton",
    "twine",
    "autopep8",
    "pytest"
]
jax = [
    "jax>=0.4.23",
    "jaxlib>=0.4.23",
    "chex>=0.1.85",
    "optax>=0.2.0",
]
jax-cuda12 = [
    "jax[cuda12]>=0.4.23",
    "chex>=0.1.85",
    "optax>=0.2.0",
]
docs = [
    "Sphinx",
    "furo",
    "sphinx-copybutton",
]
all = [
    "numpy",
    "scikit-learn",
    "matplotlib",
    "black",
    "black[jupyter]",
    "pip",
    "bump2version",
    "wheel",
    "watchdog",
    "flake8",
    "tox",
    "coverage",
    "Sphinx",
    "furo",
    "sphinx-copybutton",
    "twine",
    "autopep8",
    "pytest",
    "jax>=0.4.23",
    "jaxlib>=0.4.23",
    "chex>=0.1.85",
    "optax>=0.2.0",
]
export = [
    "flatbuffers>=25.12.19",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "python-docx>=1.2.0",
]
